# zeromq-qt-game

./: README.md
haqton-client/: CMakeLists.txt  DialogCustom.qml  ErrorNotification.qml  GameButton.qml  GameDisplayInfo.qml  LICENSE  LoadingScreen.qml  PageApprovalCompetitor_Competitor.qml  PageApprovalCompetitor_Creator.qml  PageEndMatch.qml  PageListMatches.qml  PageLogin.qml  PageMatch.qml  PageMenu.qml  PageNewMatch.qml  PageSponsors.qml  SettingsDialog.qml  TextFieldCustom.qml  ToolGameButton.qml  core.cpp  core.h  main.cpp  main.qml  messagingcontroller.cpp  messagingcontroller.h  qml.qrc  qtquickcontrols2.conf  requestcontroller.cpp  requestcontroller.h  zeromqsubscriberthread.cpp  zeromqsubscriberthread.h  zhelpers.h
haqton-client/FontAwesome/: FontAwesome.qml  Icons.qml  qmldir
haqton-client/HaqtonStyle/: Style.qml  qmldir
haqton-server/: Dockerfile  Gemfile  config.ru  haqton-server.rb  puma.rb
haqton-server/config/: database.yml
haqton-server/db/: development.sqlite3  schema.rb
haqton-server/db/migrate/: 20201006171241_create_matches.rb  20201006171718_create_match_players.rb  20201006200842_create_questions.rb  20201006201026_create_question_options.rb  20201006201356_create_match_questions.rb  20201006233745_create_logs.rb
haqton-server/plugins/: matches.rb  questions.rb
zeromq/: rrbroker  rrbroker.cpp  rrclient  rrclient.cpp  rrworker  rrworker.cpp  zhelpers.h
